Initial commit of Parallel EVL.